--- a/ecom/src/style/auth/signup.scss
+++ b/ecom/src/style/auth/signup.scss
@@ -7,12 +7,10 @@
 
 	&__form {
 		display: grid;
-		grid-template-rows:
-			[name-s] 64px [name-e email-s] 64px [email-e space-s] 35px [space-e password-s] 64px [password-e confirm-s] 64px [confirm-e] minmax(
+		grid-template-rows: [name-s] 64px [name-e email-s] 64px [email-e space-s] 35px [space-e password-s] 64px [password-e confirm-s] 64px [confirm-e] minmax(
 				20px,
 				81px
-			)
-			[line-s] 26px [line-e buttons-s] 38px [buttons-e];
+			) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
 		grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e create-s] 1fr [create-e] 1fr;
 		grid-row-gap: 15px;
 	}
@@ -29,19 +27,18 @@
 		grid-row: email-s/email-e;
 	}
 	&__password {
-		margin-top: 15px;
 		grid-row: password-s/password-e;
 	}
 	&__confirm {
 		grid-row: confirm-s/confirm-e;
 	}
+
 	&__line {
 		grid-row: line-s/line-e;
 		border-top: 1px solid #ccc;
 		margin-bottom: 24px;
 	}
 	&__login {
-		margin-top: 39px;
 		grid-row: buttons-s/buttons-e;
 		grid-column: create-s/create-e;
 	}
