--- a/ecom/src/style/main.scss
+++ b/ecom/src/style/main.scss
@@ -13,13 +13,19 @@ html {
 body {
 	font-family: "Open Sans";
 	color: #808080;
+
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizeLegibility;
+	-webkit-tap-highlight-color: transparent;
 }
 
 @import "layout";
 @import "headernavbar";
-@import "auth/signin";
-@import "auth/signup";
-
 @import "page-title";
 @import "form-fields";
 @import "details";
+
+// AUTH
+@import "auth/signin";
+@import "auth/signup";
