setup purchase history component

--- a/ecom/src/style/main.scss
+++ b/ecom/src/style/main.scss
@@ -29,3 +29,8 @@ body {
 // AUTH
 @import "auth/signin";
 @import "auth/signup";
+
+//ACCOUNT
+@import "account/account";
+@import "account/purchase-history";
+@import "account/account-information";
