search bar styles

--- a/ecom/src/style/main.scss
+++ b/ecom/src/style/main.scss
@@ -38,3 +38,7 @@ body {
 // SHOP
 @import "shop/shop";
 @import "shop/shop-search-bar";
+
+// QUANTITY
+@import "quantity";
+@import "green-price-tag";
