--- a/ecom/src/style/main.scss
+++ b/ecom/src/style/main.scss
@@ -38,9 +38,8 @@ body {
 // SHOP
 @import "shop/shop";
 @import "shop/shop-search-bar";
+@import "shop/shop-product";
 
 // QUANTITY
 @import "quantity";
 @import "green-price-tag";
-
-//
