--- a/ecom/src/style/main.scss
+++ b/ecom/src/style/main.scss
@@ -39,6 +39,7 @@ body {
 @import "shop/shop";
 @import "shop/shop-search-bar";
 @import "shop/shop-product";
+@import "shop/shop-cart";
 
 // QUANTITY
 @import "quantity";
