--- a/ecom/src/style/shop/shop-cart.scss
+++ b/ecom/src/style/shop/shop-cart.scss
@@ -8,18 +8,15 @@
 		grid-row: tog-s/tog-e;
 		grid-column: s/e;
 		justify-self: end;
-
 		display: grid;
 		justify-items: center;
 		align-items: center;
 	}
-
 	&__content {
 		grid-row: con-s/con-e;
 		grid-column: s/e;
 	}
 }
-
 .shop-cart {
 	&__toggle {
 	}
@@ -30,7 +27,6 @@
 		box-shadow: -3px 20px 20px 0 rgba(0, 0, 0, 0.2);
 	}
 }
-
 .cart-button {
 	background-color: #333;
 	color: white;
@@ -39,7 +35,6 @@
 	height: 40px;
 	width: 76px;
 }
-
 .cart-content {
 	&__title {
 		font-weight: 600;
@@ -56,32 +51,54 @@
 }
 
 .cart-footer {
+	height: 113px;
+	background-color: #1a1a1a;
+
+	display: grid;
+	grid-template-rows: [s] 1fr [e];
+	grid-template-columns: 50px [checkout-s] 1fr [checkout-e sub-s] 1fr [sub-e] 27px [price-s] 46px [price-e] 31px;
+	align-items: center;
+
+	& > * {
+		grid-row: s/e;
+	}
+
 	&__checkout {
+		grid-column: checkout-s/checkout-e;
+
 		display: grid;
 		justify-items: center;
 		align-items: center;
-
 		height: 38px;
 		width: 183px;
 		border-radius: 20px;
 		background-color: #00cb79;
-
 		color: white;
 		font-size: 1.6rem;
 		font-weight: 600;
-
 		transition: all 0.3s ease;
-
 		&:hover {
 			transform: scale(0.97);
 		}
-
 		&:active {
 			transform: scale(0.95);
 		}
-
 		&:focus {
 			outline: none;
 		}
+	}
+
+	&__subtotal {
+		justify-self: end;
+		grid-column: sub-s/sub-e;
+		font-size: 18px;
+	}
+
+	&__price {
+		justify-self: start;
+		grid-column: price-s/price-e;
+		font-size: 18px;
+		color: white;
+		font-weight: 600;
 	}
 }
