--- a/ecom/src/style/information/shipping.scss
+++ b/ecom/src/style/information/shipping.scss
@@ -4,10 +4,12 @@
 
 	&__form {
 		display: grid;
-		grid-template-rows: [name-s] 64px [name-e] 35px [address-s] 64px [address-e city-s] 64px [city-e state-zip-s] 64px [state-zip-e] minmax(
+		grid-template-rows:
+			[name-s] 64px [name-e] 35px [address-s] 64px [address-e city-s] 64px [city-e state-zip-s] 64px [state-zip-e] minmax(
 				20px,
 				81px
-			) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
+			)
+			[line-s] 26px [line-e buttons-s] 38px [buttons-e];
 		grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e use-this-address-s] 1fr [use-this-address-e] 1fr;
 		grid-row-gap: 15px;
 	}
@@ -48,19 +50,23 @@
 		grid-row: buttons-s/buttons-e;
 		grid-column: use-this-address-s/use-this-address-e;
 	}
+	&__order-summary {
+		grid-row: name-s;
+		grid-column: use-this-address-e/-1;
+		justify-self: end;
+	}
 }
 
 // .shipping {
 //     transition: all .3s ease;
 // }
-
 // @media only screen and (max-width: 600px) {
 //     .shipping  {
 //         transform: scale(0.75);
 //     }
 // }
-
 // @media only screen and (max-width: 300px) {
 //     .shipping  {
 //         transform: scale(0.6);
 //     }
+// }
